fix Visible button in context menu

--- a/pyramid_sacrud_pages/static/css/sacrud_pages.css
+++ b/pyramid_sacrud_pages/static/css/sacrud_pages.css
@@ -25,7 +25,7 @@
 }
 .jqtree-tree .jqtree-selected > .jqtree-element .jqtree-title,
 .jqtree-tree .jqtree-selected > .jqtree-element:hover .jqtree-title
-{ 
+{
 	background: #F4F9FE !important;
 	border: solid 1px #ccc !important;
 }
@@ -75,13 +75,15 @@
 }
 	.dropdown-menu__item
 	{
-		padding: 0.5em 1em 0.5em 1.5em;
+		/*padding: 0.5em 1em 0.5em 1.5em;*/
 	}
 		.dropdown-menu__item-link
 		{
 			font: 1em 'Segoe UI Light_', 'Open Sans Light', Verdana, Arial, Helvetica, sans-serif;
 			color: #000;
 			text-decoration: none;
+			padding: 0.5em 1em 0.5em 1.5em;
+			display: block;
 		}
 
 	.dropdown-menu__item:hover
